tests/algorithms/x/C/sorts/quick_sort.c
// Generated by Mochi 0.10.32 on 2025-08-11 17:23 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t quick_sort_len;

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%d", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long * quick_sort(long long * items, size_t items_len);
int main(void);

long long * quick_sort(long long * items, size_t items_len) {
    if (items_len < 2LL) {
        return quick_sort_len = items_len, items;
    }
    long long pivot = items[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? items_len + _mochi_idx : _mochi_idx;})];
    long long *lesser = NULL;
    size_t lesser_len = 0;
    long long *greater = NULL;
    size_t greater_len = 0;
    long long i = 1LL;
    while (i < items_len) {
        long long item = items[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? items_len + _mochi_idx : _mochi_idx;})];
        if (item <= pivot) {
            lesser = list_append_long_long(lesser, &lesser_len, item);
        } else {
            greater = list_append_long_long(greater, &greater_len, item);
        }
        i = i + 1LL;
    }
    {
        long long* __ret4 = concat(({long long* __tmp5 = quick_sort(lesser, lesser_len); concat(__tmp5, ({long long *tmp = malloc(1 * sizeof(long long)); tmp[0] = pivot; tmp;}));}), quick_sort(greater, greater_len));
        quick_sort_len = concat_len;
        return __ret4;
    }
}

int main(void) {
    {
        long long __start = _now();
        long long* __tmp6 = quick_sort(({long long *tmp = malloc(5 * sizeof(long long)); tmp[0] = 0LL; tmp[1] = 5LL; tmp[2] = 3LL; tmp[3] = 2LL; tmp[4] = 2LL; tmp;}), 5);
        puts(str_list_int(__tmp6, quick_sort_len));
        puts("sorted1:");
        long long* __tmp7 = quick_sort(NULL, 0);
        puts(str_list_int(__tmp7, quick_sort_len));
        puts("sorted2:");
        long long* __tmp8 = quick_sort(({long long *tmp = malloc(4 * sizeof(long long)); tmp[0] = -2LL; tmp[1] = 5LL; tmp[2] = 0LL; tmp[3] = -45LL; tmp;}), 4);
        puts(str_list_int(__tmp8, quick_sort_len));
        puts("sorted3:");
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
